--- a/templates/people/form.html
+++ b/templates/people/form.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create Person</title>
 </head>
 <body>
-
+    <h1>Create Person</h1>
+    <form method="post">
+        {% csrf_token %}
+        <label for="first_name">First Name</label><br>
+        <input type="text" name="first_name" id="first_name" required><br>
+        <label for="last_name">Last Name</label><br>
+        <input type="text" name="last_name" id="last_name"><br>
+        <label for="age">Age</label><br>
+        <input type="number" name="age" id="age"><br>
+        <label for="job_title">Job title</label><br>
+        <input type="text" name="job_title" id="job_title"><br>
+        <label for="address">Address</label><br>
+        <textarea name="address" id="address" cols="30" rows="10"></textarea><br>
+        <input type="submit" value="Create Person">
+    </form>
 </body>
 </html>
